# SpaceWalker

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/: CODEOWNERS
.github/workflows/: build.yml
cmake/: InstallArtifactoryPackage.cmake  aql_multi.json.in  aql_single.json.in  install-lkeb-artifactory-cert.sh  lkeb-artifactory-lumc-nl-chain.crt
res/: Resources.qrc
res/shaders/: Graph.frag  Graph.vert  TrianglePlot.frag  TrianglePlot.vert
src/: CellRenderer.cpp  CellRenderer.h  DataMatrix.cpp  DataMatrix.h  DataStore.h  ExportImageDialog.cpp  ExportImageDialog.h  GradientExplorerPlugin.cpp  GradientExplorerPlugin.h  GradientExplorerPlugin.json  GradientGraph.cpp  GradientView.h  Logging.h  PluginMouseListener.cpp  ProjectionView.cpp  ProjectionView.h  ScatterplotPlugin.cpp  ScatterplotPlugin.h  ScatterplotWidget.cpp  ScatterplotWidget.h  SpaceWalkerPlugin.cpp  SpaceWalkerPlugin.h  SpaceWalkerPlugin.json  Timer.cpp  Timer.h  Types.h  UserInterface.cpp  UserInterface.h
src/Actions/: DensityPlotAction.cpp  DensityPlotAction.h  ExportAction.cpp  ExportAction.h  ExportImageAction.cpp  ExportImageAction.h  FilterAction.cpp  FilterAction.h  LoadedDatasetsAction.cpp  LoadedDatasetsAction.h  MiscellaneousAction.cpp  MiscellaneousAction.h  OverlayAction.cpp  OverlayAction.h  PlotAction.cpp  PlotAction.h  PointPlotAction.cpp  PointPlotAction.h  PositionAction.cpp  PositionAction.h  RenderModeAction.cpp  RenderModeAction.h  ScalarAction.cpp  ScalarAction.h  ScalarSourceAction.cpp  ScalarSourceAction.h  SettingsAction.cpp  SettingsAction.h
src/Compute/: DataTransformations.cpp  DataTransformations.h  Directions.cpp  Directions.h  Filters.cpp  Filters.h  FloodFill.cpp  FloodFill.h  KnnGraph.cpp  KnnGraph.h  KnnIndex.cpp  KnnIndex.h  LocalDimensionality.cpp  LocalDimensionality.h  RandomWalks.cpp  RandomWalks.h  SecondaryDistanceMeasures.h
src/Graph/: GraphView.cpp  GraphView.h
src/IO/: FloodNodeExport.cpp  FloodNodeExport.h  KnnGraphIO.cpp  KnnGraphIO.h  RankingExport.cpp  RankingExport.h
src/Models/: ColorSourceModel.cpp  ColorSourceModel.h  ScalarSourceModel.cpp  ScalarSourceModel.h
src/Widgets/: GraphView.cpp  MainView.cpp  MainView.h  MetadataView.cpp  MetadataView.h
